新年快乐喵！

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -940,6 +940,26 @@
   "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
   "screen.toneko.config.random.27": "要让月亮一直皎洁哦",
   "screen.toneko.config.random.28": "不要让不开心的情绪占据了你的心灵哦，猫猫祝你一直开心",
+  "screen.toneko.config.random.29": "才... 才不是什么涩猫呢♡",
+  "screen.toneko.config.random.30": "喜欢吃鱼是真的喵",
+  "screen.toneko.config.random.31": "要贴贴喵~~♡",
+  "screen.toneko.config.random.32": "要抱抱喵~~♡",
+  "screen.toneko.config.random.33": "要亲亲喵~~♡",
+  "screen.toneko.config.random.34": "大概心里还是会带点郁闷叭，呜...",
+  "screen.toneko.config.random.35": "咱很可能是一个抖M，嘻嘻",
+  "screen.toneko.config.random.36": "嘛~ 传统老路是咱不喜欢的喵~ 咱就喜欢新的东西呢~",
+  "screen.toneko.config.random.37": "和我贴贴喵，我要贴贴要贴贴要贴贴！",
+  "screen.toneko.config.random.38": "小小的胸比大大的可爱多了呢♡ 才... 才不是因为我的胸小才喵！",
+  "screen.toneko.config.random.39": "是萝莉控，但不是炼铜喵！",
+  "screen.toneko.config.random.40": "诶嘿嘿♡ 好喜欢~",
+  "screen.toneko.config.random.41": "好想抱着小萝莉睡觉觉喵...",
+  "screen.toneko.config.random.42": "喵呜~（用尾巴扇你脸）",
+  "screen.toneko.config.random.43": "哈！（哈气）",
+  "screen.toneko.config.random.44": "哈...♡哈... 喵呜♡",
+  "screen.toneko.config.random.45": "你可以把脸埋在咱胸上喵♡ 诶嘿~♡",
+  "screen.toneko.config.random.46": "想被摸摸脑袋喵~~",
+  "screen.toneko.config.random.47": "明明是小萝莉，有时候还是会主动把自己当成大姐姐呢♡",
+  "screen.toneko.config.random.48": "咱好像总是被当成姛呢... 虽然确实带点百合属性啦~",
   "screen.toneko.config.random.3": "其实这个模组最开始只是插件来着",
   "screen.toneko.config.random.4": "喵呜~",
   "screen.toneko.config.random.5": "在下CrystalNeko喵~",
